--- a/index.html
+++ b/index.html
@@ -7,22 +7,67 @@
 </head>
 <body>
 
-	<div class="jumbotron">
-		<div class="container">
-			<h1>CODE COFFEE</h1>
-			<hr>
-			<p>We only have 5 tables! Book your seat before they are all gone!</p>
-			<p>
-				<a class="btn btn-primary btn-lg" href="tables.html">View Tables</a>
-				<a class="btn btn-danger btn-lg" href="reserve.html">Make Reservation</a>
-			</p>
-		</div>
-	</div>
+	<nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">
+    <img src="leaf.png" class="logo" width="100" height="100" class="d-inline-block align-top" alt="">
+</a>
+        <div class="text-center" id="nav">
+            <h1>GRAY'S COFFEE</h1>
+            <button class="button" type="button"><a href="tables.html">
+                <h2>View Tables</h2></button></a>
+                <button class="button" type="button"><a href="reserve.html">
+                <h2>Make Reservation</h2></button></a>
+        </div>
+    </nav>
 
-  <a href="apitable.html">API Table Link</a>
+    <div class="bg">
+        <img src="header.jpeg" height="500" width="1675">
+    </div>
+
+
+    <div class="aboutus">
+    	<h3>ABOUT US</h3>
+    	<hr>
+    	<p>We have local homegrown roots in Charlotte, North Carolina. Code Coffee is all about Organic.Ethiopian.Coffee with an array of bold, chocolaty coffee flavors and an array of warm, cozy and organic eats! We strive to curate the best cup of brew and promise to ensure your cup is flavorful and perfect each time.</p>
+    </div>
+
+     <div class="row"> 
+  <div class="column">
+    <img src="table.jpeg" style="width:100%;">
+    <img src="counter.jpeg" style="width:100%;">
+    <img src="front.jpeg" style="width:100%;">
+
+
+   
+  </div>
+  <div class="column">
+    <img src="shop.jpeg" style="width:100%;">
+    <img src="coffee.jpeg" style="width:100%;">
+        <img src="machine.jpeg" style="width:100%;">
+
+<div class="contactus">
+    	<h3>CONTACT US</h3>
+    	<hr>
+    	<p>We are located in the heart of Queen City at 23 Front Street. Enjoy strong, bold flavors of organic coffee and organic eats!</p>
+    	<p><strong>OPERATING HOURS</strong><br>
+    	Sunday - Thursday | 6:00 AM - 11:00 PM
+    <br>Friday - Saturday | 6:00 AM - 12:00 AM<p>
+    </div>
+
+  </div> 
+  </div>
+
+
+<footer>
+	<h4>GRAY'S COFFEE</h2>
+	 <a href="apitable.html">API Table Link</a>
   <br>
    <a href="waitlist.html">API Wait List</a>
 
+</footer>
+
+
+ 
 
 </body>
 </html>
