--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Code Coffee</title>
+	<title>Gray's Coffee</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -13,10 +13,12 @@
 </a>
         <div class="text-center" id="nav">
             <h1>GRAY'S COFFEE</h1>
+            <button class="button" type="button"><a href="index.html">
+                <h2>Home</h2></button></a>
             <button class="button" type="button"><a href="tables.html">
-                <h2>View Tables</h2></button></a>
+                <h2>Tables</h2></button></a>
                 <button class="button" type="button"><a href="reserve.html">
-                <h2>Make Reservation</h2></button></a>
+                <h2>Reservations</h2></button></a>
         </div>
     </nav>
 
@@ -59,15 +61,11 @@
 
 
 <footer>
-	<h4>GRAY'S COFFEE</h2>
-	 <a href="apitable.html">API Table Link</a>
-  <br>
-   <a href="waitlist.html">API Wait List</a>
+	<h4>GRAY'S COFFEE</h4>
+	 <a href="apitable.html"><h5>API Table Link</h5></a>
+   <a href="waitlist.html"><h5>API Wait List</h5></a>
 
 </footer>
-
-
- 
 
 </body>
 </html>
