--- a/tables.html
+++ b/tables.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>Code Coffee</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
+	<title>Gray's Coffee</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
-    <div class="jumbotron">
-        <div class="container">
-            <h1>CODE COFFEE</h1>
-            <hr>
-            <p>Current Reservations and Waiting List!</p>
-            <p>
-                <a class="btn btn-danger btn-lg" href="reserve.html">Make Reservation</a>
-                <a class="btn btn-primary btn-lg" href="index.html">Home</a>
-            </p>
+
+	<nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">
+    <img src="leaf.png" class="logo" width="100" height="100" class="d-inline-block align-top" alt="">
+</a>
+        <div class="text-center" id="nav">
+            <h1>GRAY'S COFFEE</h1>
+         <button class="button" type="button"><a href="index.html">
+                <h2>Home</h2></button></a>
+            <button class="button" type="button"><a href="tables.html">
+                <h2>Tables</h2></button></a>
+                <button class="button" type="button"><a href="reserve.html">
+                <h2>Reservations</h2></button></a>
         </div>
+    </nav>
+
+      <div class="bg">
+        <img src="header.jpeg" height="500" width="1675">
     </div>
+
+
     <div class="wrap">
         <!--Input row-->
         <div class="row">
-            <div class="col-12">
+            <div class="col-9">
                 <div class="card">
                     <h2 class="card-header">Current Reservations</h2>
                     <form>
-                        <div class="form-group">
-                            <label for="searchTerm"><b>XXX</b></label>
+                    <div class="form-group">
                             <input type="text" class="form-control" id="name-input" placeholder="">
                         </div>
-                        <div class="form-group">
-                            <label for="searchTerm"><b>XXX</b></label>
-                            <input type="text" class="form-control" id="role-input" placeholder="">
-                        </div>
+                     
                     </form>
                 </div>
             </div>
@@ -43,28 +47,33 @@
         <div class="wrap">
         <!--Input row-->
         <div class="row">
-            <div class="col-12">
+            <div class="col-9">
                 <div class="card">
                     <h2 class="card-header">Waiting List</h2>
                     <form>
                         <div class="form-group">
-                            <label for="searchTerm"><b>XXX</b></label>
                             <input type="text" class="form-control" id="name-input" placeholder="">
                         </div>
-                        <div class="form-group">
-                            <label for="searchTerm"><b>XXX</b></label>
-                            <input type="text" class="form-control" id="role-input" placeholder="">
-                        </div>
+        
                     </form>
                 </div>
             </div>
         </div>
+        	   <a href="clear.html"><h5>Clear Table</h5></a>
+
     </div>
     </div>
 
-      <a href="apitable.html">API Table Link</a>
-  <br>
-   <a href="waitlist.html">API Wait List</a>
+<footer>
+	<h4>GRAY'S COFFEE</h4>
+	 <a href="apitable.html"><h5>API Table Link</h5></a>
+   <a href="waitlist.html"><h5>API Wait List</h5></a>
+
+
+</footer>
+
+
+ 
+
 </body>
-
 </html>
